# generic

./: CMakeLists.txt
include/generic/: Argz.hh
src/: Argz.cc
